# RPS-DNS

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
.run/: Run dns-core.run.xml  Test dns-core.run.xml
benches/: benchmark.rs
src/: bench_func.rs  dns.rs  lib.rs  main.rs
src/dns/: answer.rs  client.rs  component.rs  constructor.rs  error.rs  net.rs  parts.rs  request.rs  resolver.rs  types.rs  utils.rs
src/dns/component/: answer.rs  request.rs  small_parts.rs
src/dns/component/small_parts/: base.rs  question.rs  record.rs
src/dns/constructor/: answer.rs  request.rs  small_parts.rs
src/dns/constructor/small_parts/: header.rs  question.rs  record.rs
src/dns/error/: dns_error.rs  error.rs  error_and_option.rs  logger.rs  result_and_error.rs
src/dns/net/: query.rs
src/dns/parts/: base.rs  header.rs  question.rs  record.rs
src/dns/parts/base/: data.rs  error.rs  tools.rs
src/dns/parts/header/: header.rs
src/dns/parts/question/: question.rs  question_body.rs
src/dns/parts/record/: record.rs  record_body.rs
src/dns/types/: base.rs  parts.rs  processed.rs  raw.rs
src/dns/types/base/: dns_type.rs  domain.rs  fmt.rs  record.rs  string.rs
src/dns/types/parts/: answer.rs  header.rs  others.rs  question.rs  raw.rs  record.rs  request.rs  response.rs
src/dns/types/processed/: answer.rs  header.rs  question.rs  record.rs  request.rs
src/dns/types/raw/: answer.rs  domain.rs  header.rs  question.rs  record.rs  (+1 more)
src/dns/utils/: array_u8.rs  ref_wrapper.rs  server_type.rs  slice_operator.rs  slice_reader.rs
tests/: resolver.rs
(+35 files in other folders)
