[package]
name = "dns-core"
version = "0.1.0"
edition = "2021"

[dependencies]
punycode = "0.4.1"
small-map = "0.1.3"
smallvec = "1.13.2"
rand = "0.9.0"


[dev-dependencies]
criterion = "0.5.1"


[[bench]]
name = "benchmark"
harness = false

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3

[build]
rustflags = ["-C", "target-cpu=native"]
