[package]
name = "dns-core"
version = "0.1.0"
edition = "2024"

[dependencies]
punycode = "0.4.1"
smallvec = "1.13.2"
rand = "0.9.0"
log = "0.4.25"
chrono = "0.4.39"
ahash = "0.8.11"
stringzilla = "3.11.3"
paste = "1.0.15"

[dev-dependencies]
criterion = "0.5.1"


[[bench]]
name = "benchmark"
harness = false

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3

[features]
logger = []
fmt = []
result_error = []
